<resources>
	<string name="app_name" translatable="false">AppLock</string>
	<string name="app_list_activity_protected_title">Protected Apps</string>
	<string name="app_list_activity_unprotected_title">Unprotected Apps</string>
	<string name="dialog_action_yes">Yes</string>
	<string name="dialog_action_no">No</string>
	<string name="dialog_content_config_changed">Configuration has been changed, are you sure to discard?</string>
	<string name="dialog_content_request_permission">We need package usage stats permission to work, please grant it to us.</string>
	<string name="dialog_title_warning">Warning</string>
	<string name="first_start_info">This is first start, please set a lock type.</string>
	<string name="fragment_pattern_view_title">Please draw your pattern</string>
	<string name="fragment_pattern_view_fingerprint">Fingerprint can unlock too</string>
	<string name="fragment_pattern_view_fingerprint_no_enroll">No fingerprint enrolled, click here to enroll</string>
	<string name="fragment_pattern_view_pattern_error">Pattern error</string>
	<string name="fragment_pin_lock_view_title">Input PIN code</string>
	<string name="fragment_pin_lock_view_pin_error">PIN error</string>
	<string name="fingerprint_auth_failed">Fingerprint Auth failed</string>
	<string name="fingerprint_auth_error">Fingerprint Auth error</string>
	<string name="lock_enroll_btn_cancel">Cancel</string>
	<string name="menu_title_settings">Settings</string>
	<string name="no_lock_type_enrolled_warning">You MUST set one lock!</string>
	<string name="pattern_lock_enroll_step1_info">Draw an unlock pattern</string>
	<string name="pattern_lock_enroll_step2_info">Draw pattern again to confirm</string>
	<string name="pattern_lock_enroll_info_mismatch">Two pattern mismatch. Try again!</string>
	<string name="pin_lock_enroll_step1_info">Input PIN</string>
	<string name="pin_lock_enroll_step2_info">Input PIN again to confirm</string>
	<string name="pin_lock_enroll_info_mismatch">PIN codes mismatch. Try again!</string>
	<string name="service_foreground_notification_title">AppLock is protecting your apps</string>
	<string name="service_foreground_notification_content">Click here to unlock and change configuration</string>
	<string name="settings_admin_explanation">Please give following permission for AppLock, if you want prevent uninstalling it from applications list.</string>
	<string name="settings_admin_summary">Lock AppLock app removal option from applications list, requires device admin permission</string>
	<string name="settings_admin_title">Lock uninstallation</string>
	<string name="settings_app_info_title">App information</string>
	<string name="settings_app_info_summary">Show information about app</string>
	<string name="settings_app_version">Version</string>
	<string name="settings_app_version_summary" formatted="false" translatable="false">Build: %s</string>
	<string name="settings_contact_title">Contact</string>
	<string name="settings_contact_summary" translatable="false">kolendo.wojciech@gmail.com</string>
	<string name="settings_header_security">Security</string>
	<string name="settings_header_about">About</string>
	<string name="settings_lock_type_pattern">Pattern</string>
	<string name="settings_lock_type_pin">PIN</string>
	<string name="settings_lock_type_title">Lock type</string>
	<string name="settings_lock_type_summary">Choose lock type when authorization is needed</string>
	<string name="settings_send_mail">Send message</string>
	<string name="snack_info_saved">Settings saved.</string>
	<string name="snack_info_no_change">Nothing changed.</string>
	<string name="toast_info_config_not_saved">Configuration not saved!</string>
	<string name="toast_info_request_permission_failed">App may not work now, cause we do not have critical permission.</string>
</resources>
