<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".views.activities.AppListActivity"
	tools:ignore="RtlHardcoded,RtlSymmetry">

	<com.google.android.material.appbar.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/ThemeOverlay.AppLock.AppBarOverlay"
		app:elevation="0dp">

		<androidx.appcompat.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			android:popupTheme="@style/ThemeOverlay.AppLock.PopupOverlay"
			android:theme="@style/ThemeOverlay.AppLock.Toolbar">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ellipsize="end"
				android:fontFamily="sans-serif-light"
				android:gravity="center"
				android:lines="1"
				android:paddingLeft="24dp"
				android:text="@string/app_name"
				android:textColor="@color/secondary_text_light"
				android:textSize="24sp" />

		</androidx.appcompat.widget.Toolbar>

	</com.google.android.material.appbar.AppBarLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="16dp"
			android:layout_marginTop="16dp"
			android:drawableLeft="@drawable/lock_outline_secondary_24dp"
			android:drawablePadding="16dp"
			android:text="@string/app_list_activity_protected_title"
			android:textAllCaps="true"
			android:textColor="@color/colorSecondary"
			android:textSize="14sp" />

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/protected_app_list_view"
			android:layout_width="match_parent"
			android:layout_height="220dp"
			android:layout_marginTop="8dp"
			app:layoutManager="LinearLayoutManager"
			tools:listitem="@layout/item_app" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="16dp"
			android:layout_marginTop="16dp"
			android:drawableLeft="@drawable/unlock_outline_secondary_24dp"
			android:drawablePadding="16dp"
			android:text="@string/app_list_activity_unprotected_title"
			android:textAllCaps="true"
			android:textColor="@color/colorSecondary"
			android:textSize="14sp" />

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/unprotected_app_list_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:clipToPadding="false"
			android:paddingBottom="88dp"
			app:layoutManager="LinearLayoutManager"
			tools:listitem="@layout/item_app" />

	</LinearLayout>

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/fab_done"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|right"
		android:layout_margin="16dp"
		android:src="@drawable/done_white_24dp"
		app:fabSize="normal" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
